Remove websocket support in favor of polling
